add explanation of game, score

--- a/index.html
+++ b/index.html
@@ -12,11 +12,24 @@
 <body>
 	<header>
 		<h1>Yet Another Javascript Snake Game!</h1>
-		<h3>By Afshin Mokhtari</h3>
+		<h4>By <a href="https://afshin.herokuapp.com" target="_blank">Afshin Mokhtari</a></h4>
+		<p><small>An <a href="http://www.theodinproject.com/javascript-and-jquery/jquery-and-the-dom" target="_blank">Odin Project challenge</a>,
+		<a href="https://github.com/afshinator/js-snake" target="_blank">source code</a>.</small>
+		</p>
 	</header>
 
 	<section>
-		<div id = "gameinfo"></div>
+		<div id = "gameinfo">
+			<div id = "instructions">
+				<ul>
+					<li>Press RETURN/ENTER to begin</li>
+					<li>Use Arrow keys to turn direction</li>
+					<li>ESC to abort game</li>
+				</ul>
+			</div>
+			<div id = "gameStats">
+			</div>
+		</div>
 		<div id = "playarea"></div>
 	</section>
 
