tweak admin console messages

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 	<section>
 		<div id = "gameinfo">
 			<div id = "instructions">
-				<ul>
-					<li>Press RETURN/ENTER to begin</li>
-					<li>Use Arrow keys to turn direction</li>
-					<li>ESC to abort game</li>
-				</ul>
+				<small>
+					<strong>Return/Enter</strong> to begin</br>
+					Use <strong>Arrow keys</strong> to turn direction</br>
+					<strong>ESC</strong> to abort game</br>
+				</small>
 			</div>
 			<div id = "gameStats">
 			</div>
