tweak starting speed

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 			</div>
 			<div id = "gameStats" class = "shadow" >
-				<p class = "bigBold" ><span id = "score" >Score: </span> -- <span id = "speed" >Speed: </span></p>
+				<p class = "bigBold" ><span id = "score" >Score: -- Speed: </span></p>
 
 				<form id = "optionCheckboxes" >
 					<fieldset>
