--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	<!--[if lt IE 9]>
 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
-	<link href="./snake.css" media="all" rel="stylesheet" type="text/css" />	
+	<link href="css/snake.css" media="all" rel="stylesheet" type="text/css" />
+	<link href="css/animate.min.css" media="all" rel="stylesheet" type="text/css" />	
 </head>
 
 <body>
