Implement deadly edges

--- a/index.html
+++ b/index.html
@@ -33,11 +33,8 @@
 			<p class = "bigBold" ><span id = "score" >Score: -- Speed: </span></p>
 
 			<form id = "optionCheckboxes" >
-				<fieldset>
-				<legend></legend>
-				<input type="checkbox" name="edges" value="noEdges" /> Deadly Edges<br />
-				<input type="checkbox" name="sound" value="soundOn" /> Sound<br />
-				</fieldset>
+				<input type="checkbox" id="edges-checkbox" /> Deadly Edges<br />
+				<input type="checkbox" id="sound-checkbox" /> Sound<br />
 				<span id='gameMsg'></span>
 			</form>				
 		</div>
