--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 			<form id = "optionCheckboxes" >
 				<input type="checkbox" id="edges-checkbox" /> Deadly Edges<br />
-				<input type="checkbox" id="sound-checkbox" /> Sound<br />
+				<input type="checkbox" id="sound-checkbox" disabled/> Sound<br />
 				<span id='gameMsg'></span>
 			</form>				
 		</div>
